fix: - collision of elements, h2 element behind contact list - display current location in sidebar menu

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -2,19 +2,15 @@
     display: flex;
     max-width: 1440px;
     background-color: #F6F7F8;
-    height: 100%;
-    
+    height: 100%; 
 }
 
 .sidebar-contacts {
-    position: absolute;
-    left: 232px;
-    top: 96px;
     overflow-y: scroll;
     background: #FFFFFF;
     box-shadow: 4px 0px 6px rgba(0, 0, 0, 0.08);
     width: 33%;
-    /* z-index: 20; creates issue with rest of main container -> h2 disappears behind contact list. without z-index box shadow from header interfers*/
+    z-index: 20; 
     height: calc(100vh - 96px);
 }
 
@@ -25,7 +21,6 @@
     align-items: flex-start;
     padding: 17px 36px;
     gap: 8px;
-    
 }
 
 .contact-list-header {
@@ -66,7 +61,6 @@
 
 .contact-display {
     width: 66%;
-    margin-left: 33%;
 }
 
 
